#149 Fixed cropped image caching

--- a/src/common/Components/PhotoPicker/GalleryWithClassification/ImageFooter/SpeciesSuggestions/styles.scss
+++ b/src/common/Components/PhotoPicker/GalleryWithClassification/ImageFooter/SpeciesSuggestions/styles.scss
@@ -23,7 +23,7 @@
 
   .re-identify-button {
     width: fit-content;
-    margin: 0 auto;
+    margin: 10px auto 0;
   }
 
   .species-array-wrapper {
